# src/swagger.json
@@ -185,6 +185,9 @@
                   },
                   "generateEmbeddings": {
                     "type": "boolean"
+                  },
+                  "updateYelpData": {
+                    "type": "boolean"
                   }
                 }
               }
@@ -193,7 +196,83 @@
         },
         "responses": {
           "200": {
-            "description": "Sync results for updated collections"
+            "description": "Sync results for updated collections",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "collectionId": {
+                        "type": "string"
+                      },
+                      "status": {
+                        "type": "string"
+                      },
+                      "collection": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string"
+                          },
+                          "yelpCollectionId": {
+                            "type": "string"
+                          },
+                          "name": {
+                            "type": "string"
+                          },
+                          "description": {
+                            "type": "string"
+                          },
+                          "lastUpdated": {
+                            "type": "string"
+                          },
+                          "businesses": {
+                            "type": "array",
+                            "items": {
+                              "type": "string"
+                            }
+                          }
+                        }
+                      },
+                      "businessesProcessed": {
+                        "type": "integer"
+                      },
+                      "businessesUpdated": {
+                        "type": "integer"
+                      },
+                      "updatedBusinesses": {
+                        "type": "array",
+                        "items": {
+                          "type": "object",
+                          "properties": {
+                            "_id": {
+                              "type": "string"
+                            },
+                            "alias": {
+                              "type": "string"
+                            },
+                            "name": {
+                              "type": "string"
+                            },
+                            "lastUpdated": {
+                              "type": "string"
+                            }
+                          }
+                        }
+                      },
+                      "totalItems": {
+                        "type": "integer"
+                      },
+                      "error": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
